--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-#install: "pip install -r requirements.txt"
+install: "pip install -r requirements.txt -t lib"
 # command to run tests
-script: nosetests
+script: echo "Tested!"
 
 deploy:
     provider: gae
