--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
 python:
-  - "2.7"
-# command to install dependencies
-install: "pip install -r requirements.txt -t lib"
-# command to run tests
+- '2.7'
+install: pip install -r requirements.txt -t lib
 script: echo "Tested!"
-
 deploy:
-    provider: gae
-    skip_cleanup: true
-    keyfile: gcp.json
-    project: alexwiss-website
-    default: true
+  provider: gae
+  skip_cleanup: true
+  keyfile: gcp.json
+  project: alexwiss-website
+  default: true
+before_install:
+- openssl aes-256-cbc -K $encrypted_76f72552fbab_key -iv $encrypted_76f72552fbab_iv
+  -in gcp.json.enc -out gcp.json -d
