--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ deploy:
   project: alexwiss-website
   default: true
 before_install:
-- openssl aes-256-cbc -K $encrypted_76f72552fbab_key -iv $encrypted_76f72552fbab_iv -in gcp.json.enc -out gcp.json -d
+- openssl aes-256-cbc -K $encrypted_76f72552fbab_key -iv $encrypted_76f72552fbab_iv
+  -in gcp.json.enc -out gcp.json -d
