--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,7 @@ deploy:
   project: alexwiss-website
   default: true
 before_install:
+- openssl aes-256-cbc -K $encrypted_9c7903890c29_key -iv $encrypted_9c7903890c29_iv
+  -in gcp.json.enc -out gcp.json -d
 - openssl aes-256-cbc -K $encrypted_76f72552fbab_key -iv $encrypted_76f72552fbab_iv
   -in gcp.json.enc -out gcp.json -d
